-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
e197bbdc4 (dev), 9f481fdd5 (6.6)
Run widgetgallery example -> surface -> topography
Zoom
| For Gerrit Dashboard: QTBUG-116108 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 497303,2 | Fix squashing issue when range changes | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
| 497325,2 | Fix squashing issue when range changes | 6.6 | qt/qtgraphs | Status: MERGED | +2 | 0 |