Fix squashing issue when range changes

Fixes: QTBUG-116108
Change-Id: I68a4348b8aa4c313c03443e000c6e13801afe14b
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit e197bbdc4d3eb7d766ec14891ca05c2001a253ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>