src/graphs/qml/qquickgraphsitem.cpp
@@ -828,31 +828,21 @@ void QQuickGraphsItem::synchData()
 
     if (m_controller->m_changeTracker.axisXRangeChanged) {
         axisDirty = true;
-        QAbstract3DAxis *axis = m_controller->axisX();
-        if (m_controller->m_isDataDirty)
-            m_initialXRange = axis->max() - axis->min();
-        float normalize = (axis->max() - axis->min()) / m_initialXRange;
-        m_scaleWithBackground.setX(m_defaultScaleWithBackground.x() * normalize);
+        calculateSceneScalingFactors();
         m_controller->m_changeTracker.axisXRangeChanged = false;
     }
 
     if (m_controller->m_changeTracker.axisYRangeChanged) {
+        axisDirty = true;
         QAbstract3DAxis *axis = m_controller->axisY();
-        if (m_controller->m_isDataDirty)
-            m_initialYRange = axis->max() - axis->min();
         updateAxisRange(axis->min(), axis->max());
-        float normalize = (axis->max() - axis->min()) / m_initialYRange;
-        m_scaleWithBackground.setY(m_defaultScaleWithBackground.y() * normalize);
+        calculateSceneScalingFactors();
         m_controller->m_changeTracker.axisYRangeChanged = false;
     }
 
     if (m_controller->m_changeTracker.axisZRangeChanged) {
         axisDirty = true;
-        QAbstract3DAxis *axis = m_controller->axisZ();
-        if (m_controller->m_isDataDirty)
-            m_initialZRange = axis->max() - axis->min();
-        float normalize = (axis->max() - axis->min()) / m_initialZRange;
-        m_scaleWithBackground.setZ(m_defaultScaleWithBackground.z() * normalize);
+        calculateSceneScalingFactors();
         m_controller->m_changeTracker.axisZRangeChanged = false;
     }
 
@@ -1261,7 +1251,7 @@ void QQuickGraphsItem::calculateSceneScalingFactors()
     scaleZ = horizontalMaxDimension * areaSize.height() / scaleFactor;
 
     m_scale = QVector3D(scaleX, scaleY, scaleZ);
-    m_defaultScaleWithBackground = QVector3D(scaleX, scaleY, scaleZ);
+    m_scaleWithBackground = QVector3D(scaleX, scaleY, scaleZ);
     m_backgroundScaleMargin = QVector3D(marginH, marginV, marginH);
 }
 
@@ -3595,11 +3585,6 @@ void QQuickGraphsItem::setActiveInputHandler(QAbstract3DInputHandler *inputHandl
 
     // Notify change of input handler
     emit inputHandlerChanged(m_activeInputHandler);
-}
-
-void QQuickGraphsItem::setDefaultScaleWithBackground(const QVector3D &newDefaultScaleWithBackground)
-{
-    m_defaultScaleWithBackground = newDefaultScaleWithBackground;
 }
 
 void QQuickGraphsItem::windowDestroyed(QObject *obj)
